--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,7 +163,7 @@ code {
   font-size: 16px;
 }
 .footer {
-  justify-content: center;
+  justify-content: fixed;
   position: relative;
   padding-left: 480px;
 }
