--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,8 +163,9 @@ code {
   font-size: 16px;
 }
 .footer {
-  position: relative;
-  padding-left: 480px;
+  position: fixed;
+  padding-left: 0; 
+  padding-bottom: 0;
 }
 .footer li {
   padding: 20px;
