--- a/stylesheet.css
+++ b/stylesheet.css
@@ -164,8 +164,7 @@ code {
 }
 .footer {
   position: fixed;
-  padding-left: 0; 
-  padding-bottom: 0;
+  padding-left: 50%;
 }
 .footer li {
   padding: 20px;
