--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: content-box;
+  
 }
 body {
+  box-sizing: border-box;
   background-color: #f5f7fa;
   padding: 20px;
   font-family: Montserrat;
@@ -163,8 +164,7 @@ code {
   font-size: 16px;
 }
 .footer {
-  position: fixed;
-  padding-left: 50%;
+  padding-left: 470px;
 }
 .footer li {
   padding: 20px;
