--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0 auto; 
-  display: flex;
+  margin: 0;
+  padding: 0;
 }
 body {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ body {
 main {
   background-color: #ffffff;
   box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
-  justify-content: center;
+  
 }
 .sidebar {
   width: 370px;
