--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body {
   background-color: #f5f7fa;
   padding: 20px;
   font-family: Montserrat;
+  justify-content: center;
 }
 main {
   background-color: #ffffff;
