--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@ main {
   display: flex;
   background-color: #ffffff;
   box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
   
 }
 .sidebar {
