--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: 10px 10px;
   padding: 0;
   box-sizing: border-box;
 }
@@ -13,6 +13,7 @@ main {
   background-color: #ffffff;
   box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
   margin: 0 auto;
+  width: 1120px;
   
 }
 .sidebar {
