feat: fix error

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,15 @@
 * {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  margin: 0 auto;
   background-color: #f5f7fa;
   padding: 20px;
   font-family: Montserrat;
 }
 main {
+  margin: 0 auto;
   display: flex;
   background-color: #ffffff;
   box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15); 
